--- a/app/src/main/res/layout/activity_experiment.xml
+++ b/app/src/main/res/layout/activity_experiment.xml
@@ -5,6 +5,7 @@
 	android:layout_height="match_parent"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:orientation="vertical"
+	android:id="@+id/root_calender_layout"
 	tools:context=".ExperimentActivity">
 
 	<com.harsh.easylife.EventCalendarView
