--- a/app/src/main/res/layout/layout_event_calendar_view.xml
+++ b/app/src/main/res/layout/layout_event_calendar_view.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
+	android:clickable="true"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
+
 	<RelativeLayout
+		android:id="@+id/month_year_title"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
 		<ImageButton
@@ -22,6 +25,7 @@
 			android:src="@drawable/ic_baseline_chevron_right_24"
 			android:background="?android:attr/actionBarItemBackground"/>
 		<TextView
+			android:textSize="20dp"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_centerInParent="true"
@@ -29,9 +33,23 @@
 			android:textColor="@android:color/black"
 			android:id="@+id/month_title"/>
 	</RelativeLayout>
+
 	<androidx.viewpager.widget.ViewPager
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:overScrollMode="never"
+		android:isScrollContainer="false"
 		android:id="@+id/calendar_pager"/>
+
+	<com.harsh.hkutils.list.HKList
+		android:visibility="gone"
+		android:id="@+id/month_list"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+
+	<com.harsh.hkutils.list.HKList
+		android:visibility="gone"
+		android:id="@+id/year_list"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+
 </LinearLayout>
