--- a/app/src/main/res/layout/activity_experiment.xml
+++ b/app/src/main/res/layout/activity_experiment.xml
@@ -12,21 +12,15 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		app:dayLayout="@layout/item_calendar_view"
+		android:visibility="gone"
 		android:id="@+id/calendar"/>
-	<Button
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:onClick="toggle"/>
-	<com.harsh.hkutils.ExpandableLayout
+
+	<com.harsh.hkutils.list.HKList
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="hiii"/>
-	</com.harsh.hkutils.ExpandableLayout>
-	<Button
-		android:layout_width="wrap_content"
+		android:layout_height="match_parent"
+		android:id="@+id/temp"/>
+	<com.harsh.easylife.CirclularProgressButton
+		android:layout_width="200dp"
 		android:layout_height="wrap_content"
-		android:onClick="toggle"/>
+		android:id="@+id/btn"/>
 </LinearLayout>
